# next-erp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  migration.sql  next.config.ts  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/standalone-server/app/: package.json  server.js
src-tauri/standalone-server/app/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json
src-tauri/standalone-server/app/.next/server/: app-paths-manifest.json  functions-config-manifest.json  middleware-build-manifest.js  middleware.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
src-tauri/standalone-server/app/.next/server/app/: _global-error.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
src-tauri/standalone-server/app/.next/server/chunks/: 01dj_next-erp__next-internal_server_app_api_departments_seed_route_actions_11h9_vl.js  09ax_03d7fie._.js  09ax_next_060qm.2._.js  09ax_next_0b4bi7z._.js  09ax_next_0ee-r3f._.js  09ax_next_dist_0-agg8m._.js  09ax_next_dist_01k_vxn._.js  09ax_next_dist_0dq9mq_._.js  09ax_next_dist_esm_build_templates_app-route_02ju5bq.js  09ax_next_dist_shared_lib_action-revalidation-kind_025nc.i.js  11p7__next-internal_server_app_api_email-templates_test_route_actions_0i81xuz.js  Dev_next-erp_08sltur._.js  Dev_next-erp_10cfjbz._.js  Dev_next-erp_11jmjk5._.js  [root-of-the-server]__012sug7._.js  (+14 more)
(+407 files in other folders)
