[package]
name = "next-erp"
version = "0.1.0"
description = "NextERP — Open-Source Business Management Platform"
authors = ["TacticDev"]
license = "MIT"
repository = "https://github.com/tyy130/next-erp"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Optimize for smaller binary size
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
